# imbatracer

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  bench.ods  bench.txt  stencil_int.ll  suppressions  todo
bench/: CMakeLists.txt  bench.cpp  bench.hpp  bench_bvh_build.cpp  bench_bvh_build.hpp  bench_ray_box.hpp  bench_ray_bvh.cpp  bench_ray_bvh.hpp  bench_ray_triangle.cpp  bench_ray_triangle.hpp  render_refs.sh  run_bench.py
bench/embree/: CMakeLists.txt
bench/scenes/cornell/: CornellBox-SpecularGlossy.mtl
bench/scenes/stilllife/: fabric_bot.tga  still_life.mtl  still_life.scene
bench/src/: CMakeLists.txt  bench.cpp  bench.hpp  bench_ray_box.cpp  bench_ray_box.hpp  bench_ray_triangle.cpp  bench_ray_triangle.hpp  main.cpp
bench/src/bench/: bench.hpp  bench_bvh_build.cpp  bench_bvh_build.hpp  bench_bvh_builder.cpp  bench_bvh_builder.hpp  bench_ray_box.cpp  bench_ray_box.hpp  bench_ray_bvh.cpp  bench_ray_bvh.hpp  bench_ray_triangle.cpp  bench_ray_triangle.hpp
bench/src/common/: logger.hpp  matrix.hpp  memory.hpp  options.hpp  path.hpp  vector.hpp
bench/src/devices/: device.hpp  png_device.cpp  png_device.hpp  sdl_device.cpp  sdl_device.hpp
bench/src/impala/: CMakeLists.txt  bench_ray4_triangle.impala  bench_ray_box.impala  bench_ray_triangle.impala  box.impala  matrix.impala  ray.impala  ray_box.impala  ray_triangle.impala  ray_triangle2.impala  triangle.impala  vector.impala
bench/src/loaders/: image_loader.hpp  loader.hpp  obj_loader.cpp  obj_loader.hpp  png_loader.cpp  png_loader.hpp  scene_loader.hpp
bench/src/scene/: image.hpp  image_buffer.hpp  instance.hpp  light.hpp  material.hpp  object.hpp  proxy.hpp  render.cpp  render.hpp  scene.cpp  scene.hpp  triangle_mesh.hpp
src/: CMakeLists.txt  bench.cpp  clock_gettime.c  main.cpp  memcpy.c
src/bench/: bench_bvh_build.cpp  bench_bvh_build.hpp  bench_ray_bvh.cpp  bench_ray_bvh.hpp  bench_ray_triangle.hpp
src/common/: logger.hpp  math.hpp  matrix.hpp  memory.hpp  options.hpp  vector.hpp
src/core/: CMakeLists.txt  assert.h  macros.h  refcounted.h  threading.cpp  threading.h  util.cpp  util.h
src/devices/: png_device.cpp  png_device.hpp  sdl_device.cpp  sdl_device.hpp
src/frontend/: SDL_device.cpp  SDL_device.h  main.cpp  render.h  test_scene.h
src/imbatracer/: CMakeLists.txt  allocator.h  bbox.h  common.h  float2.h  float3.h  float4.h  mem_pool.h  mesh.h  sbvh.cpp  sbvh.h  split.cpp  split.h  tri.cpp  tri.h
src/imbatracer/core/: adapter.h  allocator.h  atomic_vector.h  bbox.h  bsphere.h  bvh_builder.cpp  bvh_builder.h  bvh_helper.h  common.h  constants.h  counting_sort.h  cpu_adapter.cpp  cpu_tl_adapter.cpp  expr.h  fast_bvh_builder.h  float2.h  float3.h  float3x4.h  float4.h  float4x4.h  gpu_adapter.cpp  image.h  mask.h  matrix.h  mem_arena.h  mem_pool.h  mesh.cpp  mesh.h  rgb.h  sbvh_builder.h  split.cpp  split.h  stack.h  thorin_array.h  thorin_mem.h  tri.cpp  tri.h  vector.h
src/imbatracer/frontend/: SDL_device.cpp  SDL_device.h  build_scene.cpp  build_scene.h  cmd_line.h  logger.h  main.cpp  obj_loader.cpp  obj_loader.h  path.h  render_window.cpp  render_window.h  test_scene.h  texture_loader.cpp  texture_loader.h
src/imbatracer/loaders/: bvh_format.h  load_bvh.cpp  load_hdr.cpp  load_mbvh.cpp  load_obj.cpp  load_obj.h  load_png.cpp  load_tga.cpp  load_zmod.cpp  load_zmod.h  loaders.h  path.h  store_png.h
src/imbatracer/rangesearch/: CMakeCache.txt  bkp.impala  container.impala  general_mapping_cpu.impala  general_mapping_gpu.impala  gpu_primitives.impala  mapping_cpu.impala  mapping_gpu(rec comp bug).impala  mapping_gpu.impala  rangesearch.h  rangesearch.impala  rangesearch_impala_interface.h  utils.impala
src/imbatracer/render/: camera.cpp  camera.h  image.h  integrator.h  intersection.h  light.h  material.h  mem_arena.h  queue_scheduler.h  queue_scheduler_impl.h  random.h  ray_gen.h  ray_queue.h  ray_scheduler.cpp  ray_scheduler.h  render.cpp  render.h  scene.cpp  scene.h  shader.cpp  shader.h  texture_sampler.h  thorin_mem.h  tile_scheduler.h  tile_scheduler_impl.h  traversal_interface.h  traversal_mutex.cpp
src/imbatracer/tools/: zmodel.cpp
src/impala/: CMakeLists.txt  interface.impala
src/impala/accel/: bvh.impala
src/impala/bench/: bench_bvh_build.impala  bench_ray_box.impala  bench_ray_bvh.impala  bench_ray_triangle.impala
src/impala/common/: debug.impala  vectorize.impala
src/impala/intersection/: packet_box.impala  packet_tri.impala  ray_box.impala  ray_triangle.impala
src/impala/math/: box.impala  float.impala  frustum.impala  packet.impala  random.impala  ray.impala  triangle.impala
src/impala/render/: CMakeLists.txt  basic_shader.impala  buffers.impala  interface.impala  light.impala  ray.impala  render.impala  scene.impala  shader.impala  triangle.impala  vector.impala
src/io/: CMakeLists.txt  image.cpp  image.h  sdlbuffergui.cpp  sdlbuffergui.h  sdlgui.cpp  sdlgui.h  sdlguithread.cpp  sdlguithread.h  sdlrenderer.cpp  sdlrenderer.h
src/js2impala/: CMakeLists.txt  compiler.cpp  compiler.h  js2impala.cpp
src/loaders/: loader.hpp  obj_loader.cpp  obj_loader.hpp  png_loader.cpp  png_loader.hpp  scene_loader.hpp  tga_loader.cpp  tga_loader.hpp
src/main/: CMakeLists.txt  assert_cpu.impala  assert_gpu.impala  bbox.impala  bench.cpp  bvh.impala  bvh_construction.impala  bvh_traversal.impala  camcontrol.impala  cameras.impala  color.impala  dynarray.impala  extern_c.cpp  extern_c.impala  image.impala  imageload.impala  instance.impala  integrator.impala  interface.h  interface.impala  interface_acc.impala  interface_loc.impala  intersection.impala  light.impala  main.cpp  mapping_acc.impala  mapping_cpu.impala  mapping_gpu.impala  material.impala  matrix.impala  noise.impala  object.impala  objloader.cpp  objloader.h  ray.impala  render.impala  rttypes.impala  scene.cpp  scene.h  scene.impala  (+10 more)
src/render/: basic_shader.impala  float.impala  light.impala  render.impala  shader.impala
src/scene/: image.hpp  light.hpp  material.hpp  object.hpp  proxy.hpp  render.cpp  render.hpp  scene.cpp  scene.hpp  triangle_mesh.hpp
src/util/: blender_path_vis.py
(+145 files in other folders)
